Set asset type in test according to env var. Update app_meta.yaml

--- a/openregistry/assets/claimrights/tests/app_meta.yaml
+++ b/openregistry/assets/claimrights/tests/app_meta.yaml
@@ -5,6 +5,8 @@ plugins:
       assets.core:
         plugins:
           assets.claimrights:
+            aliases: [claimRights1]
+            use_default: True
 
 config:
   auth:
