--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,9 @@ services:
 env:
   global:
     - TZ=Europe/Kiev
+  matrix:
+    - ASSET_TYPE=
+    - ASSET_TYPE=claimRights1
 cache:
   directories:
     - eggs
